# shoco

./: .gitignore  .render.py.swp  .template.html.swp  .travis.yml  MANIFEST.in  Makefile  Makefile.am  README.md  README.template  README.txt  configure.ac  generate_compressor_model.py  generate_compressor_model.py~  generate_successor_table.py  index.html  pre.js  pyshoco.c  render.py  setup.py  shoco  shoco-bin.c  shoco.c  shoco.h  shoco.js  shoco.pc.in  shoco_model.h  shoco_table.h  smateco.c  smateco.h  successor_table.c  successor_table.h  template.html  test.c  test_input.c  tests.c
.ropeproject/: globalnames
css/: .skel-noscript.css.swp  .style-wide.css.swp  .style.css.swp  ie8.css  ie9.css  skel-noscript.css  style-mobile.css  style-narrow.css  style-narrower.css  style-normal.css  style-wide.css  style.css
js/: init.js
m4/: ax_cflags_warn_all.m4
models/: dictionary.h  filepaths.h  text_en.h  words_en.h
sections/: api.md  authors.md  comparisons.md  feedback.md  home.md  how.md  index  javascript.md  models.md  quickstart.md  todo.md  tools.md
tables/: filepaths.h  text_en.h  words_en.h
training_data/: dorian_gray.txt  metamorphosis.txt  pride_and_prejudice.txt
